[package]
name = "less"
version = "0.1.0"
authors = ["Koen Klaren <koen.klaren@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arraydeque = { version = "0.4.5", default-features = false }
nom = "5.0.1"

[dev-dependencies]
test-case = "1.0.0-alpha-1"