[package]
name = "less"
version = "0.1.0"
authors = ["Koen Klaren <koen.klaren@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nom = "7.1.3"

[dev-dependencies]
assert-json-diff = "2.0.2"
serde_json = "1.0.116"
