[package]
name = "less"
version = "0.1.0"
authors = ["Koen Klaren <koen.klaren@gmail.com>"]
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chumsky = "1.0.0-alpha.7"

[dev-dependencies]
assert-json-diff = "2.0.2"
serde_json = "1.0.116"
